adding tool tips to the ROM Component for longer hack assembly commented lines.